--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -793,7 +793,7 @@
   "TopbarDesktop.createListing": "+ Ajoutez votre sauna",
   "TopbarDesktop.inbox": "Messagerie",
   "TopbarDesktop.login": "Se connecter",
-  "TopbarDesktop.logo": "Saunatime",
+  "TopbarDesktop.logo": "Sportmadness",
   "TopbarDesktop.logout": "Se déconnecter",
   "TopbarDesktop.profileSettingsLink": "Mon profil",
   "TopbarDesktop.signup": "S'inscrire",
