--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -141,22 +141,22 @@
   "EditListingAvailabilityPanel.createListingTitle": "When is it available?",
   "EditListingDescriptionForm.categoryLabel": "Sauna type",
   "EditListingDescriptionForm.categoryPlaceholder": "Choose the type of your sauna…",
-  "EditListingDescriptionForm.categoryRequired": "You need to select a category for your sauna.",
+  "EditListingDescriptionForm.categoryRequired": "You need to select a category for your service.",
   "EditListingDescriptionForm.createListingDraftError": "Failed to create a draft listing. Please try again.",
-  "EditListingDescriptionForm.description": "Describe your sauna",
+  "EditListingDescriptionForm.description": "Describe your service",
   "EditListingDescriptionForm.descriptionPlaceholder": "How many people can fit at once? Does the sauna come with towels?",
   "EditListingDescriptionForm.descriptionRequired": "A description is required.",
   "EditListingDescriptionForm.maxLength": "Must be {maxLength} characters or less",
   "EditListingDescriptionForm.showListingFailed": "Fetching listing data failed",
-  "EditListingDescriptionForm.title": "The name of your sauna",
-  "EditListingDescriptionForm.titlePlaceholder": "What's the name of your sauna?",
+  "EditListingDescriptionForm.title": "The name of your service",
+  "EditListingDescriptionForm.titlePlaceholder": "What's the name of your service?",
   "EditListingDescriptionForm.titleRequired": "You need to add a name.",
   "EditListingDescriptionForm.updateFailed": "Failed to update listing. Please try again.",
-  "EditListingDescriptionPanel.createListingTitle": "Add your sauna",
+  "EditListingDescriptionPanel.createListingTitle": "Add your sport service",
   "EditListingDescriptionPanel.title": "Edit details of {listingTitle}",
   "EditListingFeaturesForm.showListingFailed": "Fetching listing data failed",
   "EditListingFeaturesForm.updateFailed": "Failed to update listing. Please try again.",
-  "EditListingFeaturesPanel.createListingTitle": "What amenities does your sauna have?",
+  "EditListingFeaturesPanel.createListingTitle": "What amenities does your service have?",
   "EditListingFeaturesPanel.title": "Edit the amenities of {listingTitle}",
   "EditListingLocationForm.address": "Address",
   "EditListingLocationForm.addressNotRecognized": "We didn't recognize this location. Please try another location.",
@@ -166,19 +166,19 @@
   "EditListingLocationForm.buildingPlaceholder": "A 42",
   "EditListingLocationForm.showListingFailed": "Fetching listing data failed",
   "EditListingLocationForm.updateFailed": "Failed to update listing. Please try again.",
-  "EditListingLocationPanel.createListingTitle": "Where's your sauna?",
+  "EditListingLocationPanel.createListingTitle": "Where's your service?",
   "EditListingLocationPanel.title": "Edit the location of {listingTitle}",
   "EditListingPage.loadingListingData": "Loading listing data…",
   "EditListingPage.titleCreateListing": "Create a listing",
   "EditListingPage.titleEditListing": "Edit listing",
-  "EditListingPhotosForm.addImagesTip": "Tip: Choose the top 2-3 photos of your sauna from different angles in a good light that really show the space.",
+  "EditListingPhotosForm.addImagesTip": "Tip: Choose the top 2-3 photos of your service. Upload a poster with service details would be a good idea. If this is not your first time you can upload images of previous or similar experiences",
   "EditListingPhotosForm.bankAccountNumberRequired": "You need to add a bank account number.",
   "EditListingPhotosForm.chooseImage": "+ Choose an image…",
   "EditListingPhotosForm.imageRequired": "You need to add at least one image.",
   "EditListingPhotosForm.imageTypes": ".JPG, .GIF or .PNG. Max. 10 MB",
   "EditListingPhotosForm.imageUploadFailed.uploadFailed": "Failed to upload image. Please check that the image wasn't too big and try again.",
   "EditListingPhotosForm.imageUploadFailed.uploadOverLimit": "The maximum file size is 10 MB. Please try again.",
-  "EditListingPhotosForm.publishListingFailed": "Publishing a new sauna failed",
+  "EditListingPhotosForm.publishListingFailed": "Publishing a new service failed",
   "EditListingPhotosForm.savedImageAltText": "Saved listing image",
   "EditListingPhotosForm.showListingFailed": "Fetching listing data failed",
   "EditListingPhotosForm.updateFailed": "Failed to update listing. Please try again.",
@@ -674,20 +674,20 @@
   "SearchPage.searchError": "Search failed. Please try again.",
   "SearchResultsPanel.nextPage": "Next page",
   "SearchResultsPanel.previousPage": "Previous page",
-  "SectionHero.browseButton": "Browse saunas",
-  "SectionHero.subTitle": "The largest online community to rent saunas in Finland.",
-  "SectionHero.title": "Book saunas everywhere.",
-  "SectionHowItWorks.createListingLink": "PS. You can also become a Saunatime host in just a few clicks!",
-  "SectionHowItWorks.part1Text": "Start by searching for a location. Once you find a sauna you like, simply check the availability, book it, and make a secure payment right away.",
+  "SectionHero.browseButton": "Browse services",
+  "SectionHero.subTitle": "The largest sport activities place in Europe",
+  "SectionHero.title": "Your next sport adventure starts here",
+  "SectionHowItWorks.createListingLink": "PS. You can also become a Sportmadness host in just a few clicks!",
+  "SectionHowItWorks.part1Text": "Start by searching for a location. Once you find a service you like, simply check the availability, book it, and make a secure payment right away.",
   "SectionHowItWorks.part1Title": "1. Browse and book",
   "SectionHowItWorks.part2Text": "Meet your host on the chosen date and enjoy a home sauna experience. We'll handle the payment to the host after your experience.",
   "SectionHowItWorks.part2Title": "2. Have a great bath",
   "SectionHowItWorks.part3Text": "If you enjoyed the experience, let others know by reviewing your sauna host. Help others know where to go.",
   "SectionHowItWorks.part3Title": "3. Review the host",
-  "SectionHowItWorks.titleLineOne": "The sauna ritual",
-  "SectionHowItWorks.titleLineTwo": "(or how Saunatime works).",
-  "SectionLocations.listingsInLocation": "Saunas in {location}",
-  "SectionLocations.title": "Explore exotic locations in Finland",
+  "SectionHowItWorks.titleLineOne": "How Sportmadness work?",
+  "SectionHowItWorks.titleLineTwo": " ",
+  "SectionLocations.listingsInLocation": "Sport services in {location}",
+  "SectionLocations.title": "Explore all the activities",
   "SelectMultipleFilter.labelSelected": "{labelText} • {count}",
   "SelectMultipleFilterPlainForm.labelSelected": "{labelText} • {count}",
   "SelectSingleFilter.popupClear": "Clear",
@@ -790,10 +790,10 @@
   "Topbar.mobileSearchHelp": "Tip: You can also search saunas by zip code, for example \"00500\" or city district – \"Sörnäinen\".",
   "Topbar.searchIcon": "Open search",
   "TopbarDesktop.accountSettingsLink": "Account settings",
-  "TopbarDesktop.createListing": "+ Add your sauna",
+  "TopbarDesktop.createListing": "+ Add your service",
   "TopbarDesktop.inbox": "Inbox",
   "TopbarDesktop.login": "Log in",
-  "TopbarDesktop.logo": "Saunatime",
+  "TopbarDesktop.logo": "Sportmadness",
   "TopbarDesktop.logout": "Log out",
   "TopbarDesktop.profileSettingsLink": "Profile settings",
   "TopbarDesktop.signup": "Sign up",
@@ -809,8 +809,8 @@
   "TopbarMobileMenu.signupOrLogin": "{signup} or {login}",
   "TopbarMobileMenu.unauthorizedGreeting": "Hello there,{lineBreak}would you like to {signupOrLogin}?",
   "TopbarMobileMenu.yourListingsLink": "Your listings",
-  "TopbarSearchForm.placeholder": "Search saunas…",
-  "TopbarSearchForm.searchHelp": "Tip: You can also search saunas by zip code, for example \"00500\" or city district \"Sörnäinen\".",
+  "TopbarSearchForm.placeholder": "Search activities",
+  "TopbarSearchForm.searchHelp": "Tip: You can also search activiti4s by zip code, for example \"28290\" or city district \"Las Rozas\".",
   "TransactionPage.deletedListing": "deleted listing",
   "TransactionPage.fetchOrderFailed": "Fetching order data failed.",
   "TransactionPage.fetchSaleFailed": "Fetching sale data failed.",
