--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -139,12 +139,12 @@
   "EditListingAvailabilityForm.updateFailed": "Failed to update listing. Please try again.",
   "EditListingAvailabilityPanel.title": "Edit the availability of {listingTitle}",
   "EditListingAvailabilityPanel.createListingTitle": "When is it available?",
-  "EditListingDescriptionForm.categoryLabel": "Sauna type",
-  "EditListingDescriptionForm.categoryPlaceholder": "Choose the type of your sauna…",
+  "EditListingDescriptionForm.categoryLabel": "Service type",
+  "EditListingDescriptionForm.categoryPlaceholder": "Choose the type of your service",
   "EditListingDescriptionForm.categoryRequired": "You need to select a category for your service.",
   "EditListingDescriptionForm.createListingDraftError": "Failed to create a draft listing. Please try again.",
   "EditListingDescriptionForm.description": "Describe your service",
-  "EditListingDescriptionForm.descriptionPlaceholder": "How many people can fit at once? Does the sauna come with towels?",
+  "EditListingDescriptionForm.descriptionPlaceholder": "What's the format of the event? What's cool about the sport? It's indiviual, couples or team sport?",
   "EditListingDescriptionForm.descriptionRequired": "A description is required.",
   "EditListingDescriptionForm.maxLength": "Must be {maxLength} characters or less",
   "EditListingDescriptionForm.showListingFailed": "Fetching listing data failed",
@@ -153,6 +153,9 @@
   "EditListingDescriptionForm.titleRequired": "You need to add a name.",
   "EditListingDescriptionForm.updateFailed": "Failed to update listing. Please try again.",
   "EditListingDescriptionPanel.createListingTitle": "Add your sport service",
+  "EditListingCapacityPanel.title":"What's the capacity of your {category}",
+  "EditListingWizard.saveNewCapacity": "Save capacity",
+  "EditListingWizard.saveEditCapacity": "Edit capacity",
   "EditListingDescriptionPanel.title": "Edit details of {listingTitle}",
   "EditListingFeaturesForm.showListingFailed": "Fetching listing data failed",
   "EditListingFeaturesForm.updateFailed": "Failed to update listing. Please try again.",
@@ -307,7 +310,7 @@
   "InboxPage.stateRequested": "Requested",
   "InboxPage.title": "Inbox",
   "LandingPage.schemaDescription": "Book a sauna using Saunatime or earn some income by sharing your sauna",
-  "LandingPage.schemaTitle": "Book saunas everywhere | {siteTitle}",
+  "LandingPage.schemaTitle": "Book sport activities everywhere | {siteTitle}",
   "ListingCard.hostedBy": "Hosted by {authorName}.",
   "ListingCard.perDay": "per day",
   "ListingCard.perNight": "per night",
@@ -687,7 +690,7 @@
   "SectionHowItWorks.titleLineOne": "How Sportmadness work?",
   "SectionHowItWorks.titleLineTwo": " ",
   "SectionLocations.listingsInLocation": "Sport services in {location}",
-  "SectionLocations.title": "Explore all the activities",
+  "SectionLocations.title": "Explore all the locations",
   "SelectMultipleFilter.labelSelected": "{labelText} • {count}",
   "SelectMultipleFilterPlainForm.labelSelected": "{labelText} • {count}",
   "SelectSingleFilter.popupClear": "Clear",
