--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -171,6 +171,12 @@
   "EditListingPage.loadingListingData": "Cargando anuncio…",
   "EditListingPage.titleCreateListing": "Crear un anuncio",
   "EditListingPage.titleEditListing": "Editar anuncio",
+  "EditListingCapacityPanel.title":"¿Cuál es el número máximo de participantes en {listingTitle}",
+  "EditListingWizard.saveNewCapacity": "Siguiente: Reglas",
+  "EditListingWizard.saveEditCapacity": "Editar capacidad",
+  "EditListingWizard.tabLabelCapacity":"Selecciona una opción",
+  "EditListingCapacityForm.capacityPlaceholder":"Selecciona una opción",
+  "EditListingCapacityForm.capacityRequired": "Debes seleccionar una capacidad antes de continuar",
   "EditListingPhotosForm.addImagesTip": "Consejo: Selecciona 2 o 3 fotos de tu servicio desde distinto ángulos y con buena luz para mostrar bien el espacio.",
   "EditListingPhotosForm.bankAccountNumberRequired": "Necesitas agregar tu número de cuenta bancaria.",
   "EditListingPhotosForm.chooseImage": "+ Añadir imagen…",
@@ -212,7 +218,7 @@
   "EditListingWizard.saveEditPolicies": "Guardar reglas",
   "EditListingWizard.saveEditPricing": "Guardar precio",
   "EditListingWizard.saveNewDescription": "Siguiente: Servicios",
-  "EditListingWizard.saveNewFeatures": "Siguiente: Reglas",
+  "EditListingWizard.saveNewFeatures": "Siguiente: Capacidad",
   "EditListingWizard.saveNewLocation": "Siguiente: Precio",
   "EditListingWizard.saveNewAvailability": "Siguiente: Fotos",
   "EditListingWizard.saveNewPhotos": "Publicar anuncio",
